Se agrego el cierre de sesion dentro del HomeController, y tambien se agrego el item.

--- a/ReTurnoWeb/Views/Shared/_Layout.cshtml
+++ b/ReTurnoWeb/Views/Shared/_Layout.cshtml
@@ -25,6 +25,10 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        @* agregamos la funcion de cerrar sesion *@
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="CerrarSesion">Cerrar Sesion</a>
+                        </li>
                     </ul>
                 </div>
             </div>
