Nuevo Item generado, que es donde se visualizaran los turnos, cshtml de turnos

--- a/ReTurnoWeb/Views/Shared/_Layout.cshtml
+++ b/ReTurnoWeb/Views/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+
+                        @* agregamos el item de los turnos *@
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Turnos">Turnos</a>
+                        </li>
+
                         @* agregamos la funcion de cerrar sesion *@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="CerrarSesion">Cerrar Sesion</a>
